--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WBLCT.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WBLCT.data.br",
-        frameworkUrl: buildUrl + "/WBLCT.framework.js.br",
-        codeUrl: buildUrl + "/WBLCT.wasm.br",
+        dataUrl: buildUrl + "/WBLCT.data.unityweb",
+        frameworkUrl: buildUrl + "/WBLCT.framework.js.unityweb",
+        codeUrl: buildUrl + "/WBLCT.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WGLT",
