--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WBLCT.loader.js";
+      var loaderUrl = buildUrl + "/WBLCT2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WBLCT.data.unityweb",
-        frameworkUrl: buildUrl + "/WBLCT.framework.js.unityweb",
-        codeUrl: buildUrl + "/WBLCT.wasm.unityweb",
+        dataUrl: buildUrl + "/WBLCT2.data.unityweb",
+        frameworkUrl: buildUrl + "/WBLCT2.framework.js.unityweb",
+        codeUrl: buildUrl + "/WBLCT2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WGLT",
